-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
-
aarch64
-
linux
[...]/barrierSetAssembler_aarch64.hpp:47:16: warning: 'virtual void BarrierSetAssembler::store_at(MacroAssembler*, DecoratorSet, BasicType, Address, Register, Register, Register, Register)' was hidden [-Woverloaded-virtual]
store_at gained an extra tmp3 argument. Also template table _fast_qgetfield passes rscratch1 as a temporary to load_at which uses rscratch1/rscratch2 internally.
store_at gained an extra tmp3 argument. Also template table _fast_qgetfield passes rscratch1 as a temporary to load_at which uses rscratch1/rscratch2 internally.