8267818: [lworld] [AArch64] Shenandoah barrier set build warnings and register conflict

Reviewed-by: fparain